--- a/public/css/style.css
+++ b/public/css/style.css
@@ -9,6 +9,9 @@ body{
 .mb40{
     margin-bottom: 40px !important;
 }
+.mb20{
+    margin-bottom: 20px !important;
+}
 .disabled{
     cursor: not-allowed;
     opacity: .7;
@@ -191,6 +194,12 @@ i{
     border-top: none;
 }
 .profile .form-group{
+    border-left: none !important;
+}
+.profile .nav-tabs-custom {
+    box-shadow: none;
+}
+.profile .form-group{
     margin-bottom: 0;
     border: 1px solid #d0d0d0;
     border-bottom: 1px;
@@ -302,7 +311,7 @@ i{
     border-radius: 50%;
 }
 .sidebar {
-    border-top: 1px solid #008d4c;
+    /*border-top: 1px solid #fff;*/
 }
 .treeview-menu>li>a {
     padding: 12px 5px 5px 15px;
@@ -475,6 +484,7 @@ ul.user-data li i{
 }
 .user-profile-img{
     width: 100px;
+    height: 100px;
     padding: 3px;
     border: 3px solid #d2d6de;
 }
@@ -648,4 +658,16 @@ p.help-block{
 }
 .objectifs tr.userMentorInfoRow td {
     border: 2px solid #28a8e4;
+}
+.bootstrap-wysihtml5-insert-link-modal .modal-dialog{
+    width: 90%;
+}
+.bootstrap-wysihtml5-insert-link-modal .modal-header{
+    display: none;
+}
+.bootstrap-wysihtml5-insert-link-modal .modal-content{
+    padding: 2em;
+}
+.bootstrap-wysihtml5-insert-link-target{
+    margin-left: -15px !important;
 }
