fix modifs of 11-12-2018

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -320,9 +320,16 @@ i{
 .sidebar-menu>li>a {
     font-size: 14px;
 }
-.sidebar-menu>li.active>a{
+.sidebar-menu>li.active>a, .sidebar-menu .treeview-menu>li.active>a{
     color: #1b1b1b !important;
     background: #cdd8e4 !important;
+    border-left-color: #3c8dbc;
+}
+.sidebar-menu>li>.treeview-menu{
+    margin: 0 !important;
+}
+.sidebar-menu>li>a , .sidebar-menu .treeview-menu>li>a{
+    border-left: 3px solid transparent;
 }
 .box-header {
     margin-bottom: 1em;
@@ -675,4 +682,10 @@ p.help-block{
 }
 .bootstrap-wysihtml5-insert-link-target{
     margin-left: -15px !important;
+}
+.pagination-container .pagination {
+    margin: 0 !important;
+}
+.treeview-menu{
+    padding: 0;
 }
