--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,7 +117,6 @@ i{
 }
 .box{
     padding: 1em;
-    box-shadow: -2px 3px 20px 4px rgb(113, 140, 150);
 }
 .login-page{
     padding-top: 5%;
@@ -212,7 +211,7 @@ i{
 .profile .list-group-item:first-child{
     border-top: 0;
 }
-.profile .form-group:first-child{
+.profile .tab-pane .form-group:first-child{
     border-top: none;
 }
 .profile .form-group{
@@ -340,11 +339,6 @@ i{
 }
 .sidebar-menu>li>a {
     font-size: 14px;
-}
-.sidebar-menu>li.active>a{
-    color: #1b1b1b !important;
-    background: #cdd8e4 !important;
-    border-left-color: #3c8dbc;
 }
 .sidebar-menu>li>.treeview-menu{
     margin: 0 !important;
@@ -829,3 +823,7 @@ p.help-block{
   }
 }
 
+.callout.callout-info{
+    background-color: #e6f3f9 !important;
+    color: #4e4e4e !important;
+}
