--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -1,5 +1,6 @@
 // components
-// @import 'components/layout';
-// @import 'components/icons';
-// @import 'components/margin_padding';
-// @import 'components/error-page';
+ @import 'components/layout';
+ @import 'components/icons';
+ @import 'components/margin_padding';
+ @import 'components/error-page';
+ @import 'components/form';
