dynamiser le form de creation de questionnaire

--- a/resources/assets/sass/components/_card.scss
+++ b/resources/assets/sass/components/_card.scss
@@ -20,6 +20,10 @@
   position: relative;
   border-top-left-radius: .25rem;
   border-top-right-radius: .25rem;
+  .card-tools {
+    float: right;
+    margin-right: -.625rem;
+  }
 }
 .card-title {
   float: left;
