--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,7 +45,6 @@ label.required:after {
 
 input[readonly] {
   background-color: #f3ecec;
-  border: none;
 }
 
 textarea {
@@ -208,7 +207,15 @@ i {
   padding: 2px 10px 13px;
   color: #444;
 }
-
+.w-100 {
+  width: 100%;
+}
+.dropdown-menu>li>a {
+  padding: 10px 20px;
+}
+.pull-right>.dropdown-menu {
+  min-width: 100%;
+}
 .portlet-title > .nav-tabs > li.active,
 .portlet-title > .nav-tabs > li.active:hover {
   border-bottom: 4px solid #f3565d;
@@ -256,7 +263,6 @@ i {
 }
 
 .card {
-  padding: 12px 20px 25px 20px;
   background-color: #fff;
 }
 
