--- a/resources/assets/sass/components/_icons.scss
+++ b/resources/assets/sass/components/_icons.scss
@@ -2,3 +2,8 @@
   -webkit-animation: fa-spin 1s infinite linear !important;
   animation: fa-spin 1s infinite linear !important;
 }
+
+.fa-spin {
+  -webkit-animation: fa-spin 0.75s infinite linear !important;
+  animation: fa-spin 0.75s infinite linear !important;
+}
