--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -5,4 +5,5 @@
  @import 'components/error-page';
  @import 'components/form';
  @import 'components/card';
+ @import 'components/box';
  @import 'base/typography';
