--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -6,4 +6,8 @@
  @import 'components/form';
  @import 'components/card';
  @import 'components/box';
+ @import 'components/alert';
+
  @import 'base/typography';
+
+ @import 'bootstrap/base';
