--- a/resources/assets/sass/bootstrap/_modals.scss
+++ b/resources/assets/sass/bootstrap/_modals.scss
@@ -5,4 +5,10 @@
     font-weight: 700;
     font-size: 1em;
   }
+  .modal-title {
+    display: inline-block;
+  }
+  .close {
+    font-size: 20px;
+  }
 }
