--- a/resources/assets/sass/bootstrap/_responsive.scss
+++ b/resources/assets/sass/bootstrap/_responsive.scss
@@ -4,7 +4,9 @@
   .navbar-nav {
     > li {
       > a {
-        padding: 8px 15px !important;
+        padding: 0 15px!important;
+        line-height: 50px !important;
+        height: 50px;
       }
     }
   }
