--- a/resources/assets/sass/components/_form.scss
+++ b/resources/assets/sass/components/_form.scss
@@ -156,6 +156,7 @@
 }
 .form-group {
   position: relative;
+  margin-bottom: 0px !important;
 }
 .form-group .custom-file {
   margin-bottom: 8px;
@@ -269,4 +270,12 @@ label[for="profile_attachement"]:after {
 .control-label {
   font-weight: bold;
   font-size: 15px;
+  margin-bottom: 2px !important;
+}
+.form-control:focus {
+  color: #495057 !important;
+  background-color: #fff !important;
+  border-color: #80bdff !important;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25) !important;
 }
