--- a/public/css/style.css
+++ b/public/css/style.css
@@ -64,6 +64,10 @@ textarea {
   color: white;
 }
 
+table {
+  margin-bottom: 20px !important;
+}
+
 .table > tbody > tr > td {
   vertical-align: middle;
 }
