reouvrir les evaluations et ajouter type de questionnaire

--- a/resources/assets/sass/bootstrap/_modals.scss
+++ b/resources/assets/sass/bootstrap/_modals.scss
@@ -10,5 +10,11 @@
   }
   .close {
     font-size: 20px;
+    padding: 0 4px;
+    outline: none;
+    border: 1px solid transparent;
+    &:hover {
+      border-color: #000;
+    }
   }
 }
