--- a/public/css/style.css
+++ b/public/css/style.css
@@ -933,7 +933,7 @@ p.help-block {
 .looding {
   position: absolute;
   top: 40%;
-  left: 50%;
+  left: 47%;
 }
 
 .looding .reloadDouble {
@@ -1058,4 +1058,9 @@ p.help-block {
 }
 .border-bottom {
   border-bottom: 1px solid gray;
+}
+.showFormBtn {
+  background: white;
+  padding: 10px;
+  box-shadow: 6px 1px 2px 2px #e0e5ea;
 }
