--- a/resources/assets/sass/bootstrap/_modals.scss
+++ b/resources/assets/sass/bootstrap/_modals.scss
@@ -21,6 +21,9 @@
 .modal {
   z-index: 999999 !important;
 }
+.modal-content {
+  border-radius: 0 !important;
+}
 .select2-dropdown {
   z-index: 9999999;
 }
