finaliser refactoring de la page users

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -7,6 +7,7 @@
  @import 'components/card';
  @import 'components/box';
  @import 'components/alert';
+ @import 'components/table';
 
  @import 'base/typography';
 
