--- a/resources/assets/sass/base/_typography.scss
+++ b/resources/assets/sass/base/_typography.scss
@@ -724,6 +724,9 @@ dl {
   background: red !important;
   color: white !important;
 }
-.d-inline {
+.d-inline-block {
   display: inline-block;
+}
+.d-none {
+  display: none;
 }
