--- a/resources/assets/sass/bootstrap/forms.scss
+++ b/resources/assets/sass/bootstrap/forms.scss
@@ -1,68 +1,6 @@
-input {
-  &[type="text"], &[type="password"], &[type="email"], &[type="number"], &[type="url"] {
-    padding: 6px 10px;
-    outline: none;
-    font-size: 15px;
-    color: #909090;
-    margin: 0;
-    max-width: 100%;
-    width: 100%;
-    box-sizing: border-box;
-    display: block;
-    background-color: #fcfcfc;
-    font-weight: 500;
-    border: 1px solid #e0e0e0;
-    opacity: 1;
-  }
-}
 
-textarea {
-  padding: 6px 10px;
-  outline: none;
-  font-size: 15px;
-  color: #909090;
-  margin: 0;
-  max-width: 100%;
-  width: 100%;
-  box-sizing: border-box;
-  display: block;
-  background-color: #fcfcfc;
-  font-weight: 500;
-  border: 1px solid #e0e0e0;
-  opacity: 1;
-}
 
-select {
-  padding: 6px 8px !important;
-  outline: none;
-  font-size: 15px;
-  color: #909090;
-  margin: 0;
-  max-width: 100%;
-  width: 100%;
-  box-sizing: border-box;
-  display: block;
-  background-color: #fcfcfc;
-  font-weight: 500;
-  border: 1px solid #e0e0e0;
-  opacity: 1;
-  padding: 0;
-}
-
-input {
-  &[type="text"]:focus, &[type="password"]:focus, &[type="email"]:focus, &[type="number"]:focus {
-    color: #808080;
-    -webkit-transition: all 0.1s ease-in-out;
-    -moz-transition: all 0.1s ease-in-out;
-    -o-transition: all 0.1s ease-in-out;
-    -ms-transition: all 0.1s ease-in-out;
-    transition: all 0.1s ease-in-out;
-    border: 1px solid #d8d8d8;
-    opacity: 1;
-  }
-}
-
-textarea:focus {
+.form-control:focus {
   color: #808080;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
