--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1056,3 +1056,6 @@ p.help-block {
   padding: 10px;
   box-shadow: 6px 1px 2px 2px #e0e5ea;
 }
+.modal-dialog {
+  top: calc(50% - 200px) !important;
+}
