--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1057,5 +1057,5 @@ p.help-block {
   box-shadow: 6px 1px 2px 2px #e0e5ea;
 }
 .modal-dialog {
-  top: calc(50% - 200px) !important;
+  top: calc(10%) !important;
 }
