--- a/public/css/style.css
+++ b/public/css/style.css
@@ -912,12 +912,7 @@ p.help-block {
   padding-left: 4px;
 }
 
-.inputNote {
-  display: none;
-}
-
 .form-group .notation {
-  display: none;
   padding: 0 8px
 }
 
@@ -1062,4 +1057,7 @@ p.help-block {
 }
 .modal-dialog {
   top: calc(10%) !important;
+}
+.text-center {
+  text-align: center !important;
 }
