--- a/resources/assets/sass/components/_form.scss
+++ b/resources/assets/sass/components/_form.scss
@@ -185,7 +185,6 @@
   border-radius: 2px;
   position: relative;
   top: -9px;
-  text-transform: uppercase;
   letter-spacing: 0.03em;
   display: inline-table;
   &:before {
@@ -278,4 +277,38 @@ label[for="profile_attachement"]:after {
   border-color: #80bdff !important;
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0,123,255,.25) !important;
+}
+
+
+/* move placeholer on top on focus or filled input */
+
+.indicators-container label {
+  position:relative;
+}
+
+.indicators-container span {
+  padding: 8px;
+  pointer-events: none;
+  position:absolute;
+  left:0;
+  top:0;
+  transition: 0.2s;
+  transition-timing-function: ease;
+  transition-timing-function: cubic-bezier(0.25, 0.1, 0.25, 1);
+  opacity:0.5;
+}
+
+.indicators-container input {
+  padding:10px;
+}
+
+.indicators-container input:focus + span, .indicators-container input:not(:placeholder-shown) + span {
+  opacity:1;
+  transform: scale(0.75) translateY(-100%) translateX(-30px);
+}
+
+/* For IE Browsers*/
+.indicators-container input:focus + span, .indicators-container input:not(:-ms-input-placeholder) + span {
+  opacity:1;
+  transform: scale(0.75) translateY(-100%) translateX(-30px);
 }
