corriger le mode edition et tester on the real time sur les pondération

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -12,6 +12,7 @@
  @import 'components/box';
  @import 'components/alert';
  @import 'components/table';
+ @import 'components/switch-btn';
  @import 'base/typography';
  @import 'bootstrap/base';
  @import 'style';
