--- a/resources/assets/sass/components/_switch-btn.scss
+++ b/resources/assets/sass/components/_switch-btn.scss
@@ -18,7 +18,7 @@
     left: 0;
     right: 0;
     bottom: 0;
-    background-color: #ca2222;
+    background-color: #bdbdbd;
     -webkit-transition: .4s;
     transition: .4s;
   }
