--- a/resources/assets/sass/_style.scss
+++ b/resources/assets/sass/_style.scss
@@ -693,9 +693,11 @@ ul.user-data li {
   }
 }
 
-.survey label.questionTitle {
+.questionTitle {
   display: block;
   padding: 6px 3px;
+  font-size: 16px;
+  font-weight: bold;
 }
 
 .asterisk {
